[project]
name = "fine-tuning"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "accelerate>=1.11.0",
    "bitsandbytes>=0.48.2",
    "datasets>=4.3.0",
    "peft>=0.17.1",
    "torch>=2.8.0",
    "transformers>=4.57.1",
    "trl>=0.23.0",
    "unsloth>=2025.11.2",
]
